# stats_servise

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
app/: config.py  consumer.py  database.py  main.py  settings.py
